--- a/index2.html
+++ b/index2.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <p>this is the best website</p>
+    <p>i have a new car here man </p>
+    <p>something is better than nothing </p>
 </body>
 </html>
